# PrimeEngine

./: .gitattributes  .gitignore  AddChanges.bat  README.md  TODO.txt
PrimeEngine/: CMakeLists.txt  PrimeEngine.sln
PrimeEngine/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  DllExport.h  GameObject.h  Input.cpp  PrimeEngine.vcxproj  PrimeEngine.vcxproj.filters  PrimeEngineBase.cpp  Scene.h
PrimeEngine/Core/Components/: Behaviour.cpp  Behaviour.h  Component.h  Object.h  Transform.cpp
PrimeEngine/Core/Graphics/: BasicWindow.cpp  BatchRenderer2D.h  Camera.cpp  Color.h  Font.h  Label.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  ModelImporter.cpp  Sprite.h  Texture.h
PrimeEngine/Core/Graphics/Buffers/: VertexArray.h  VertexBuffer.h
PrimeEngine/Core/Graphics/Layers/: GameLayer.cpp  UILayer.h
PrimeEngine/Core/Graphics/Lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  SpotLight.cpp
PrimeEngine/Core/Graphics/Shader/: Shader.h
PrimeEngine/Core/Math/: Matrix4x4.cpp  Matrix4x4.h  Quaternion.h  Vector3.h  Vector4.h
PrimeEngine/Core/Networking/: TCPServer.h
PrimeEngine/Core/Utilities/: FileUtils.h  Time.cpp  Utils.cpp
PrimeEngine/Dependencies/FreeImage/: FreeImage.2013.sln  FreeImage.2013.vcxproj  FreeImage.aps
PrimeEngine/Dependencies/FreeType/: CMakeLists.txt  FreeType.vcxproj  FreeType.vcxproj.filters
PrimeEngine/Dependencies/FreeType/freetype-gl/: common.h  opengl.h  texture-atlas.c  texture-font.c
PrimeEngine/Dependencies/GLFW/: GLFW.vcxproj  GLFW.vcxproj.filters  cmake_uninstall.cmake
PrimeEngine/Dependencies/GLFW/src/: context.c  win32_monitor.c
PrimeEngine/Integration/: CMakeLists.txt  Demo.cpp  Demo.h  FlappyBird.cpp  FlappyBird.h  Game.cpp  Game.h  Integration.vcxproj  Integration.vcxproj.filters  PrimeIntegration.vcxproj  PrimeIntegration.vcxproj.filters
PrimeEngine/PE_Android_Test/: CMakeLists.txt  gles3jni.cpp
PrimeEngine/PrimeEngine/: DllExport.h  Input.cpp  Input.h  PrimeEngine.h  PrimeEngine.vcxproj  PrimeEngine.vcxproj.filters  PrimeException.cpp  PrimeException.h  Vector3.cpp  Vector3.h  Window.cpp  Window.h
PrimeEngine/PrimeEngine-Core/: CMakeLists.txt  DllExport.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  PrimeEngine.cpp  PrimeEngine.h  PrimeEngine.vcxproj  PrimeEngine.vcxproj.filters  PrimeEngineBase.cpp  PrimeEngineBase.h  PrimeException.h  Scene.cpp  Scene.h  TestTexture.cpp  TestTexture.h
PrimeEngine/PrimeEngine-Core/Components/: Component.h  Object.h  Transform.cpp  Transform.h
PrimeEngine/PrimeEngine-Core/Components/Behaviours/: FpsCamera.cpp  FpsCamera.h
PrimeEngine/PrimeEngine-Core/Graphics/: BasicWindow.h  BatchRenderer2D.cpp  BatchRenderer2D.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Font.cpp  Font.h  Label.cpp  Label.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ModelImporter.cpp  ModelImporter.h  OpenGL.cpp  OpenGL.h  Renderable.h  Renderable2D.h  Renderer2D.h  Shader.cpp  Shader.h  SimpleRenderer2D.cpp  SimpleRenderer2D.h  SimpleSprite.cpp  SimpleSprite.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Window.cpp  Window.h
PrimeEngine/PrimeEngine-Core/Graphics/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
PrimeEngine/PrimeEngine-Core/Graphics/Layers/: GameLayer.cpp  GameLayer.h  Group.cpp  Layer.cpp  Layer.h  UILayer.cpp  UILayer.h
PrimeEngine/PrimeEngine-Core/Graphics/Lights/: AmbientLight.cpp  AmbientLight.h  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
PrimeEngine/PrimeEngine-Core/Graphics/Shader/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
PrimeEngine/PrimeEngine-Core/Math/: Math.h  MathFunc.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
PrimeEngine/PrimeEngine-Core/Networking/: NetworkClient.cpp  NetworkEntity.h  NetworkHost.cpp  NetworkHost.h  NetworkSever.cpp  TCPClient.cpp  TCPClient.h  TCPServer.h  TCPSever.cpp
PrimeEngine/PrimeEngine-Core/UI/: Text.cpp  Text.h  UIObject.h
PrimeEngine/PrimeEngine-Core/Utilities/: ColorPrinter.h  CommonFileUtils.cpp  File.h  ImageLoader.h  Log.h  Time.cpp  Time.h  Utils.cpp  Utils.h
PrimeEngine/PrimeEngine/Core/: Math.h
PrimeEngine/PrimeEngine/Debug/: vc140.idb
PrimeEngine/PrimeEngine/Debug/PrimeEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PrimeEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PrimeEngine/PrimeEngine/Graphics/: BatchRenderer2D.cpp  BatchRenderer2D.h  Camera.cpp  Camera.h  Renderable2D.h  Renderer2D.h  Shader.cpp  Shader.h  SimpleRenderer2D.cpp  SimpleRenderer2D.h  SimpleSprite.h  Sprite.cpp  Sprite.h  Window.cpp  Window.h
PrimeEngine/PrimeEngine/Graphics/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  (+1 more)
PrimeEngine/PrimeEngine/Math/: MathFunc.h  Matrix4x4.cpp  Matrix4x4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
PrimeEngine/PrimeEngine/Networking/: NetworkClient.cpp  NetworkClient.h  NetworkEntity.h  NetworkHost.cpp  NetworkHost.h  NetworkServer.h  NetworkSever.cpp
PrimeEngine/PrimeEngine/Shaders/: standard.frag  standard.vert
PrimeEngine/PrimeEngine/Utilities/: File.h  Time.cpp  Time.h
PrimeEngine/PrimeEngineAndroid/: .gitignore
PrimeEngine/PrimeEngineAndroid/app/: build.gradle
PrimeEngine/PrimeEngineTests/: Matrix4x4Tests.cpp  PrimeEngineTests.vcxproj  Vector3Tests.cpp  stdafx.cpp
PrimeEngine/PrimeIntegration/: CMakeLists.txt  Demo.cpp  Demo.h  FlappyBird.cpp  FlappyBird.h  Game.cpp  Game.h  Main.cpp  PrimeIntegration.vcxproj  PrimeIntegration.vcxproj.filters
PrimeEngine/Projects/CMake/: CMakeLists.txt
PrimeEngine/Projects/VisualStudio/: PrimeEngine.sln  WindowsIntegration.vcxproj
PrimeEngine/Test Game/: Main.cpp  Test Game.vcxproj  Test Game.vcxproj.filters  TestGame.cpp  TestGame.h  TicTacToe.cpp  standard.frag  standard.vert
PrimeEngine/Tests/: Matrix4x4Tests.cpp  PrimeEngineTests.vcxproj  README.txt  Tests.vcxproj  Vector3Tests.cpp
(+231 files in other folders)
